infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: booster-syndrome
  labels:
    name: booster-syndrome
